# document-iq

./: .gitignore  README.md
dev/: requirements-dev.txt
document-iq/document-iq-core/: README.md  pyproject.toml  requirements.txt
document-iq/document-iq-core/src/document_iq_core/: constants.py
document-iq/document-iq-core/src/document_iq_core/config/: settings.py
document-iq/document-iq-core/src/document_iq_core/contracts/: dl_labels.py  ml_features.py  versions.py
document-iq/document-iq-core/src/document_iq_core/mlflow_utils/: loader.py  registry.py  tracking.py
document-iq/document-iq-core/src/document_iq_core/schemas/: common.py  dl.py  ml.py  ocr.py  rag.py
document-iq/document-iq-core/src/document_iq_core/utils/: __init__.py  expection.py  logger.py
document-iq/document-iq-dl-pipeline/: .gitignore  README.md  dvc.yaml  pyproject.toml  requirements.txt
document-iq/document-iq-dl-pipeline/.dvc/: config
document-iq/document-iq-dl-pipeline/artifacts/: .gitignore
document-iq/document-iq-dl-pipeline/artifacts/dataset/: dataset_report.json
document-iq/document-iq-dl-pipeline/configs/: training.yaml  yolo_training.yaml
document-iq/document-iq-dl-pipeline/data/: .gitignore
document-iq/document-iq-dl-pipeline/data/interim/: .gitignore
document-iq/document-iq-dl-pipeline/data/raw/: FUNSD.dvc
document-iq/document-iq-dl-pipeline/src/document_iq_dl/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_trainer.py  yolo_data_ingestion.py  yolo_data_validation.py  yolo_model_evaluation.py  yolo_model_trainer.py
document-iq/document-iq-dl-pipeline/src/document_iq_dl/datasets/: funsd_dataset.py  funsd_to_yolo.py
document-iq/document-iq-dl-pipeline/src/document_iq_dl/models/: layout_classifier.py  yolo_pyfunc_wrapper.py
document-iq/document-iq-platform/components/account-component/: Dockerfile  alembic.ini  pyproject.toml
document-iq/document-iq-platform/components/account-component/alembic/: env.py
document-iq/document-iq-platform/components/account-component/alembic/versions/: f6b1842b59d0_initial_tables.py  f801790df4b0_initial_tables.py
document-iq/document-iq-platform/components/account-component/src/document_iq_platform_account/: main.py
document-iq/document-iq-platform/components/account-component/src/document_iq_platform_account/api/: auth.py  organization.py  user.py
document-iq/document-iq-platform/components/account-component/src/document_iq_platform_account/database/: base.py  session.py
document-iq/document-iq-platform/components/account-component/src/document_iq_platform_account/models/: organization.py  user.py
document-iq/document-iq-platform/components/account-component/src/document_iq_platform_account/saga/: events.py  publisher.py
document-iq/document-iq-platform/components/account-component/src/document_iq_platform_account/schemas/: auth.py
document-iq/document-iq-platform/components/account-component/src/document_iq_platform_account/security/: dependencies.py  jwt.py  password.py  rbac.py
document-iq/document-iq-platform/components/account-component/src/document_iq_platform_account/services/: auth_service.py  organization_service.py
document-iq/document-iq-platform/components/aggregator/: Dockerfile  pyproject.toml
document-iq/document-iq-platform/components/aggregator/app/document_iq_platform_aggregator/consumers/: ingestion.py  layout.py
document-iq/document-iq-platform/components/aggregator/src/document_iq_platform_aggregator/: main.py
document-iq/document-iq-platform/components/application-component/: Dockerfile  alembic.ini  pyproject.toml
document-iq/document-iq-platform/components/application-component/alembic/: env.py
document-iq/document-iq-platform/components/application-component/alembic/versions/: 79f219154aa2_added_columns_in_documnet.py  d606bc6472fb_initial_application_schema.py
document-iq/document-iq-platform/components/application-component/src/document_iq_platform_application/: main.py
document-iq/document-iq-platform/components/classification-engine/: Dockerfile  pyproject.toml
document-iq/document-iq-platform/components/classification-engine/src/document_iq_platform_classification/: consumer.py  main.py  model_loader.py  service.py
document-iq/document-iq-platform/components/layout-engine/: Dockerfile  pyproject.toml
document-iq/document-iq-platform/components/layout-engine/src/document_iq_platform_layout/: consumer.py  main.py  model_loader.py  service.py  utils.py
document-iq/document-iq-platform/components/rag-engine/: Dockerfile  pyproject.toml
document-iq/document-iq-platform/components/rag-engine/chroma_data/: chroma.sqlite3
document-iq/document-iq-platform/components/rag-engine/src/: test.py
document-iq/document-iq-platform/components/rag-engine/src/document_iq_platform_rag/: consumer.py  main.py  query_router.py  service.py
document-iq/document-iq-platform/gateways/ui-bff/: Dockerfile  pyproject.toml
document-iq/document-iq-platform/gateways/ui-bff/app/: main.py
document-iq/document-iq-platform/gateways/ui-bff/app/routes/: document.py
document-iq/document-iq-platform/gateways/ui-bff/app/schemas/: document.py
document-iq/document-iq-platform/gateways/ui-bff/src/document_iq_ui_bff/: main.py
document-iq/document-iq-platform/ops/dlq-tooling/: Dockerfile  pyproject.toml
document-iq/document-iq-platform/ops/dlq-tooling/src/document_iq_dlq_tooling/: monitor.py  replay.py  storage.py
document-iq/document-iq-platform/shared/: pyproject.toml
document-iq/document-iq-platform/shared/src/: pyproject.toml
document-iq/document-iq-platform/shared/src/platform-shared/events/: document_events.py
document-iq/document-iq-platform/shared/src/platform-shared/messaging/: kafka.py
document-iq/document-iq-platform/shared/src/platform_shared/: tracing.py
document-iq/document-iq-platform/shared/src/platform_shared/config/: settings.py
document-iq/document-iq-platform/shared/src/platform_shared/storage/: mongo_client.py  redis_client.py
document-iq/document-iq-platform/shared/src/schemas/: document.py
(+149 files in other folders)
