[project]
name = "document-iq-core"
version = "1.0.1"
description = "Shared core library for DocumentIQ"
requires-python = ">=3.9"
dependencies = [
    "pydantic",
    "pydantic-settings",
    "mlflow"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
