[project]
name = "document-iq-dl-pipeline"
version = "1.0.0"
description = "Deep Learning pipeline for DocumentIQ"
requires-python = ">=3.9"
dependencies = [
    "dvc",
    "torch",
    "torchvision"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"