[project]
name = "document-iq-platform-shared"
version = "0.1.0"
description = "Shared utilities, schemas, and events for DocumentIQ platform"
dependencies = [
    "pydantic",
    "python-dotenv",
    "kafka-python",
    "document-iq-core"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]