[project]
name = "document-iq-platform-shared"
version = "1.0.6"
description = "Shared utilities, schemas, and events for DocumentIQ platform"
dependencies = [
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "kafka-python",
    "document-iq-core",
    "pymongo"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]