[project]
name = "document-iq-platform-shared"
version = "1.0.8"
description = "Shared utilities, schemas, and events for DocumentIQ platform"
dependencies = [
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "kafka-python",
    "document-iq-core",
    "pymongo",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-requests",
    "opentelemetry-instrumentation-sqlalchemy",
    "opentelemetry-instrumentation-logging"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]