[project]
name = "document-iq-platform-aggregator"
version = "0.1.0"
description = "Document aggregator service for DocumentIQ platform"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "kafka-python",
    "pydantic",
    "python-dotenv",
    "redis",
    "platform-shared @ git+https://github.com/PranavTupe2000/document-iq.git@master#subdirectory=document-iq/document-iq-platform/shared"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]