[project]
name = "document-iq-platform-aggregator"
version = "1.0.1"
description = "Document aggregator service for DocumentIQ platform"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "kafka-python",
    "pydantic",
    "python-dotenv",
    "redis",
    "document-iq-platform-shared"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]