[project]
name = "document-iq-ui-bff"
version = "0.1.0"
dependencies = [
    "document-iq-shared @ file:///shared/src/platform_shared",
    "fastapi",
    "uvicorn",
    "kafka-python",
    "pydantic",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]