[project]
name = "document-iq-ui-bff"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "kafka-python",
    "pydantic",
    "platform-shared @ git+https://github.com/PranavTupe2000/document-iq.git@master#subdirectory=document-iq/document-iq-platform/shared"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]