[project]
name = "document-iq-dlq-tooling"
version = "1.0.0"
description = "DLQ of message queue for DocumentIQ"
requires-python = ">=3.9"
dependencies = [
    "kafka-python",
    "redis",
    "document-iq-platform-shared"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"